package main

import (
	"context"
	"fmt"
	"log"
	"net"
	"os"
	"os/signal"
	"syscall"
	"time"

	"auth-service/internal/config"
	"auth-service/internal/handler"
	"auth-service/internal/repository"
	"auth-service/internal/service"
	"auth-service/pkg/database"
	pb "auth-service/proto"

	"google.golang.org/grpc"
	"google.golang.org/grpc/reflection"
)

func main() {
	// –ó–∞–≥—Ä—É–∂–∞–µ–º –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—é
	cfg := config.Load()

	log.Printf("üöÄ Starting Auth Service")
	log.Printf("üìù Configuration:")
	log.Printf("   Port: %d", cfg.Port)
	log.Printf("   Database: %s:%d/%s", cfg.DBHost, cfg.DBPort, cfg.DBName)
	log.Printf("   Environment: %s", cfg.Environment)

	// –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ –±–∞–∑–µ –¥–∞–Ω–Ω—ã—Ö
	dbConfig := database.Config{
		Host:     cfg.DBHost,
		Port:     cfg.DBPort,
		User:     cfg.DBUser,
		Password: cfg.DBPassword,
		Name:     cfg.DBName,
		SSLMode:  cfg.DBSSLMode,
	}

	db, err := database.NewPostgresConnection(dbConfig)
	if err != nil {
		log.Fatalf("‚ùå Failed to connect to database: %v", err)
	}
	defer func() {
		if err := db.Close(); err != nil {
			log.Printf("‚ö†Ô∏è Error closing database: %v", err)
		}
		log.Println("‚úÖ Database connection closed")
	}()

	log.Println("‚úÖ Connected to PostgreSQL database")

	// –ü—Ä–æ–≤–µ—Ä—è–µ–º —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ —Å –±–∞–∑–æ–π
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()

	if err := db.PingContext(ctx); err != nil {
		log.Fatalf("‚ùå Database ping failed: %v", err)
	}
	log.Println("‚úÖ Database ping successful")

	// –°–æ–∑–¥–∞–µ–º —Ä–µ–ø–æ–∑–∏—Ç–æ—Ä–∏–π
	userRepo := repository.NewPostgresUserRepository(db)
	log.Println("‚úÖ User repository initialized")

	// –°–æ–∑–¥–∞–µ–º —Å–µ—Ä–≤–∏—Å
	authService := service.NewAuthService(userRepo, cfg.JWTSecret, cfg.RefreshSecret)
	log.Println("‚úÖ Auth service initialized")

	// –°–æ–∑–¥–∞–µ–º gRPC –æ–±—Ä–∞–±–æ—Ç—á–∏–∫
	grpcHandler := handler.NewGRPCHandler(authService)
	log.Println("‚úÖ gRPC handler initialized")

	// –ù–∞—Å—Ç—Ä–∞–∏–≤–∞–µ–º gRPC —Å–µ—Ä–≤–µ—Ä —Å middleware
	grpcServer := grpc.NewServer(
		grpc.ChainUnaryInterceptor(
			loggingInterceptor,
			recoveryInterceptor,
		),
	)

	// –†–µ–≥–∏—Å—Ç—Ä–∏—Ä—É–µ–º —Å–µ—Ä–≤–∏—Å
	pb.RegisterAuthServiceServer(grpcServer, grpcHandler)

	// –í–∫–ª—é—á–∞–µ–º reflection –¥–ª—è –æ—Ç–ª–∞–¥–∫–∏ (—Ç–æ–ª—å–∫–æ –≤ development)
	if cfg.Environment == "development" {
		reflection.Register(grpcServer)
		log.Println("‚úÖ gRPC reflection enabled (development mode)")
	}

	// –ó–∞–ø—É—Å–∫–∞–µ–º gRPC —Å–µ—Ä–≤–µ—Ä
	listener, err := net.Listen("tcp", fmt.Sprintf(":%d", cfg.Port))
	if err != nil {
		log.Fatalf("‚ùå Failed to create listener: %v", err)
	}

	// –ö–∞–Ω–∞–ª –¥–ª—è graceful shutdown
	stopChan := make(chan os.Signal, 1)
	signal.Notify(stopChan, syscall.SIGINT, syscall.SIGTERM)

	// –ó–∞–ø—É—Å–∫–∞–µ–º —Å–µ—Ä–≤–µ—Ä –≤ –≥–æ—Ä—É—Ç–∏–Ω–µ
	go func() {
		log.Printf("‚úÖ Auth Service gRPC server listening on port %d", cfg.Port)
		log.Printf("üì° Available endpoints:")
		log.Printf("   - /auth.AuthService/Register")
		log.Printf("   - /auth.AuthService/Login")
		log.Printf("   - /auth.AuthService/Refresh")
		log.Printf("   - /auth.AuthService/ValidateToken")
		log.Printf("   - /auth.AuthService/GetUser")
		log.Printf("   - /auth.AuthService/HealthCheck")

		if err := grpcServer.Serve(listener); err != nil {
			log.Fatalf("‚ùå Failed to serve gRPC: %v", err)
		}
	}()

	// –ñ–¥–µ–º —Å–∏–≥–Ω–∞–ª –∑–∞–≤–µ—Ä—à–µ–Ω–∏—è
	<-stopChan
	log.Println("üõë Received shutdown signal")

	// Graceful shutdown
	log.Println("‚è≥ Shutting down gracefully...")

	// –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º gRPC —Å–µ—Ä–≤–µ—Ä
	grpcServer.GracefulStop()
	log.Println("‚úÖ gRPC server stopped")

	log.Println("üëã Auth Service shutdown complete")
}

// Middleware –¥–ª—è –ª–æ–≥–∏—Ä–æ–≤–∞–Ω–∏—è
func loggingInterceptor(ctx context.Context, req interface{}, info *grpc.UnaryServerInfo, handler grpc.UnaryHandler) (interface{}, error) {
	start := time.Now()

	// –ü—Ä–æ–ø—É—Å–∫–∞–µ–º health checks –∏–∑ –ª–æ–≥–æ–≤
	if info.FullMethod != "/auth.AuthService/HealthCheck" {
		log.Printf("üì• gRPC call: %s", info.FullMethod)
	}

	resp, err := handler(ctx, req)

	if info.FullMethod != "/auth.AuthService/HealthCheck" {
		duration := time.Since(start)
		log.Printf("üì§ gRPC call %s completed in %v", info.FullMethod, duration)
	}

	return resp, err
}

// Middleware –¥–ª—è recovery (–æ–±—Ä–∞–±–æ—Ç–∫–∞ –ø–∞–Ω–∏–∫)
func recoveryInterceptor(ctx context.Context, req interface{}, info *grpc.UnaryServerInfo, handler grpc.UnaryHandler) (resp interface{}, err error) {
	defer func() {
		if r := recover(); r != nil {
			log.Printf("‚ö†Ô∏è PANIC recovered in gRPC handler %s: %v", info.FullMethod, r)
			err = fmt.Errorf("internal server error")
		}
	}()

	return handler(ctx, req)
}
